no commit message

--- a/src/wts-web/src/main/resources/log4j.properties
+++ b/src/wts-web/src/main/resources/log4j.properties
@@ -1,5 +1,6 @@
 log4j.rootLogger=WARN,Console
 log4j.logger.com.farm=INFO,Filelog
+log4j.logger.com.wts=INFO,Filelog
 log4j.logger.org.apache=ERROR,Filelog
 log4j.logger.org.hibernate=ERROR,Filelog
 log4j.logger.org.springframework=ERROR,Filelog
@@ -27,7 +28,7 @@ log4j.appender.farmdb.layout.ConversionPattern= %-5p: %m(%c#%M %x) %X{UUID}  %d{
 # File Appender  ${catalina.base}=tomcatRoot
 ####################### 
 log4j.appender.Filelog=org.apache.log4j.RollingFileAppender  
-log4j.appender.Filelog.File=${catalina.base}/wcplogs/EKS.log
+log4j.appender.Filelog.File=${catalina.base}/wcplogs/WTS.log
 log4j.appender.Filelog.layout=org.apache.log4j.PatternLayout  
 log4j.appender.Filelog.layout.ConversionPattern=%-5p\: %m(%c\#%M %x)  %d{yyyy\u5E74MM\u6708dd\u65E5HH\u70B9mm\u5206} %n
 log4j.appender.Filelog.MaxFileSize=10MB
