--- a/src/wts-web/src/main/resources/jdbc.properties
+++ b/src/wts-web/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc\:mysql\://127.0.0.1\:3306/wts?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc\:mysql\://127.0.0.1\:3306/wts-jlsc?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=root
