no commit message

--- a/src/wts-web/src/main/resources/log4j.properties
+++ b/src/wts-web/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootLogger=WARN,Console
-log4j.logger.com.farm=INFO,Filelog
-log4j.logger.com.wts=INFO,Filelog
+log4j.logger.com.farm=WARN,Filelog
+log4j.logger.com.wts=WARN,Filelog
 log4j.logger.org.apache=ERROR,Filelog
 log4j.logger.org.hibernate=ERROR,Filelog
 log4j.logger.org.springframework=ERROR,Filelog
@@ -8,9 +8,9 @@ log4j.logger.org.springframework=ERROR,Filelog
 #the log into Database
 log4j.logger.com.farm.web.log=INFO,farmdb
 #function runtime show(level:debug)
-log4j.logger.com.farm.web.Inteceptor=INFO,Filelog
+log4j.logger.com.farm.web.Inteceptor=WARN,Filelog
 #sql runtime show(level:debug)
-log4j.logger.com.farm.core.sql.query=INFO,Filelog
+log4j.logger.com.farm.core.sql.query=WARN,Filelog
 #-------------------------------------------------------------------------
 ########################  
 # Console Appender  
