--- a/src/wts-core/pom.xml
+++ b/src/wts-core/pom.xml
@@ -98,6 +98,11 @@
 			<version>1.9.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
