no commit message

--- a/src/wts-web/src/main/resources/config/config.properties
+++ b/src/wts-web/src/main/resources/config/config.properties
@@ -2,7 +2,7 @@ init.config.spring.configs=config/spring-mvc.xml,config/spring-hibernate.xml
 #false/antisamy.xml<antisamy-anythinggoes.xml<antisamy-myspace.xml<antisamy-ebay.xml<antisamy-slashdot.xml
 config.safe.xss.conf=antisamy.xml
 config.filter.encode=utf-8
-config.sys.version=0.9.5
+config.sys.version=0.9.6
 #'config.auth.check.url' edit to this following parameter
 config.sys.mode.debug=false
 #can run cmd task,the function have danger!!
@@ -15,6 +15,7 @@ config.sys.mate.keywords=\u77E5\u8BC6\u5E93,\u77E5\u8BC6\u7BA1\u7406,\u77E5\u8BC
 config.sys.mate.author=wcp\u77E5\u8BC6\u7BA1\u7406\u7CFB\u7EDF
 config.index.defaultpage=home/Pubindex.html
 config.sys.web.themes.path=web-simple
-config.client.limit.able=true
-config.client.limit.all.second.num=100
-config.client.limit.do.second.num=20
+config.client.limit.ip.able=false
+config.client.limit.do.ip.second.num=20
+config.client.limit.ipsession.able=false
+config.client.limit.do.ipsession.second.num=10
